<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_activity_home_screen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="txt_patientname">Hey Sammy</string>
    <string name="doctors">Doctors</string>
    <string name="history">History</string>
    <string name="nameofdoctor">NameOfDoctor</string>
    <string name="categoryofdoctor">categoryOfDoctor</string>
    <string name="bookAppointment">Book</string>
    <string name="contact_us_email">Email</string>
    <string name="contactus_submit">Submit</string>
    <string name="text_contact_us">CONTACT US</string>
    <string name="name_contact_us">Name</string>
    <string name="phone_number_contactus">Phone Number</string>
    <string name="backgroundimage">backgroundimage</string>
    <string name="our_team_will_contact_you_soon">our team will contact you soon</string>
    <string name="countrycode_contactus">+91</string>
    <string name="contact_us">contact us</string>
    <string name="share">share</string>
    <string name="logout">logout</string>
    <string name="name">Name</string>
    <string name="date">10-05-2021</string>
    <string name="category">Category</string>
    <string name="settingsimage">settingsImage</string>
    <string name="hrishita_mavani">Hrishita Mavani</string>
    <string name="yash_raj_sharma_dummy_name">Yash Raj Sharma</string>
    <string name="dr_hrishita_mavani_doctor_name">Dr. Hrishita Mavani</string>
    <string name="introduction">Introduction</string>
    <string name="dummy_intro">What is Lorem Ipsum Lorem Ipsum fdksjkfjkdsfjdsfkdsksdkjnskgnsdkgnksdngkdsngksjgnkdsnjksfnksgksgkfdngjdfbgjsfbjsfbjsbjfbjsbjsfb is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book it has?</string>
    <string name="experience_detail">15</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="appointment">Appointment</string>
    <string name="select_date">Select Date</string>
    <string name="mention_your_problem">Mention your Problem</string>
    <string name="share_your_details_with_doctor">share your details with doctor</string>


    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_login">LOGIN</string>

    <string name="label_signup">Signup</string>
    <string name="label_signup_using_your_details">Signup using your details</string>
    <string name="label_name">Name</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_email1">Email</string>
    <string name="label_password1">Password</string>
    <string name="label_signup1">Signup</string>
    <string name="label_already_have_an_account">Already have an account?</string>
    <string name="label_login_using_email_and_password">Login using email and password</string>
    <string name="label_new_account">New account</string>

    <string name="app_name">WE CURE</string>
    <string name="label_give_a_feedback">Give a Feedback</string>
    <string name="label_dummy_intro">What is Lorem Ipsum Lorem Ipsum fdksjkfjkdsfjdsfkdsksdkjnskgnsdkgnksdngkdsngksjgnkdsnjksfnksgksgkfdngjdfbgjsfbjsfbjsbjfbjsbjsfb is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book it has?</string>
    <string name="label_dr_riya_patel">Dr.Riya Patel</string>
    <string name="label_reason_for_appointment">Reason for Appointment</string>
    <string name="label_send_the_verification_link">Send the verification link</string>


    <string name="don_t_have_an_account" tools:ignore="StringEscaping">Dont have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="label_length">Password minimum length should be 8</string>
    <string name="label_enter_your_email_address_to_reset_your_password">Enter your Email address to reset your password.</string>
    <string name="label_go_back_to_login">Go Back to Login</string>
    <string name="label_yash_raj_sharma">Yash Raj Sharma</string>
    <string name="label_gender">Gender</string>
    <string name="label_blood_group">Blood Group</string>
    <string name="label_weight">Weight</string>
    <string name="label_height">Height</string>
    <string name="title_activity_field_validator">FieldValidator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="label_ok">OK</string>

    <string name="_3_5">3.5</string>
    <string name="very_nice_doctor">Very nice doctor</string>
    <string name="are_you_a_doctor_or_a_patient">Are You a Doctor or a Patient?</string>
    <string name="doctor">Doctor</string>
    <string name="pat">Patient</string>
    <string name="cancel">Cancel</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="gender">Gender</string>
    <string name="problem">Problem</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="blood_group">Blood Group</string>
    <string name="specialization">Specialization</string>
    <string name="hey_doctor">Hey Doctor</string>

    <string name="label_reset_password">Reset Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_set">Set</string>

    <string name="label_current_password">Current Password</string>
    <string name="label_patient_details">Patient Details</string>
    <string name="label_riya_patel">Riya Patel</string>
    <string name="label_9090245504">9090245504</string>
    <string name="selected_date">Selected Dt</string>
    <string name="dsgdsfsgsgs">dsgdsfsgsgs</string>
    <string name="label_problem">Problem</string>
    <string name="label_confirm_appointment">Confirm Appointment</string>
    <string name="label_selected_date">Selected Date</string>
    <string name="label_a">A+</string>
    <string name="label_50kg">50kg</string>
    <string name="label_5_7">5\'7</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="signup_failed">Signup failed.Try Again</string>
    <string name="length_less_than_8">password can\'t be less than 8 digits</string>
    <string name="length_greater_than_10">Number cannot be greater than 10 digits</string>
    <string name="required_1_digit">Required at least 1 digit</string>
    <string name="must_contain_upper_lower">Password must contain upper and lower case letters</string>
    <string name="invald_email">Invalid Email!</string>
    <string name="special_character_required">Required atleast 1 special character</string>
    <string name="bundle_category">category</string>
    <string name="profile_updated">profile updated successfully</string>
    <string name="label_fever_with_cold">Fever with cold</string>
    <string name="label_ria">Ria</string>
    <string name="label_91_6757473212">+91 6757473212</string>
    <string name="label_17_7_21">17/7/21</string>
    <string name="label_female">FEMALE</string>
    <string name="label_fever">Fever</string>
    <string name="label_150">150</string>
    <string name="label_50">50</string>
    <string name="label_b">B+</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_reviews">Reviews</string>
    <string name="label_i_am_doctor_hrishita_i_am_an_orthopedic">I am doctor Hrishita. I am an orthopedic.</string>
    <string name="label_qualification">Qualification</string>
    <string name="label_orthopedic">Orthopedic</string>
    <string name="label_view">View</string>
    <string name="label_10_2_3031">10-2-3031</string>
    <string name="label_headache_and_fever">HeadAche and fever</string>
    <string name="label_pending">pending</string>
    <string name="label_appointment_status">Appointment Status</string>
    <string name="label_new_requests">New Requests</string>

</resources>