<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wecure.patient.PatientHistoryActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/id_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="@dimen/dp_10"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label_go_back_to_login">

    </ImageView>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/topG"
        app:layout_constraintGuide_begin="@dimen/dp_20"
        android:orientation="horizontal">

    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottomG"
        app:layout_constraintGuide_end="@dimen/dp60"
        android:orientation="horizontal">

    </androidx.constraintlayout.widget.Guideline>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:textSize="@dimen/sp_17"
        app:layout_constraintTop_toTopOf="@id/topG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorDarkBlue"
        android:text="@string/label_patient_details"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="@font/poppinsbold"
        android:id="@+id/txt_appointment_title"
        app:fontFamily="@font/poppinsbold"
        android:textStyle="bold"
        android:layout_height="wrap_content">

    </com.google.android.material.textview.MaterialTextView>

     <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/txt_appointment_title"
        app:layout_constraintBottom_toTopOf="@id/bottomG"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/colorLight"
        android:id="@+id/card_container"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:elevation="@dimen/dp_5"
        app:cardCornerRadius="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:id="@+id/inside_card_appointment"
         android:paddingStart="@dimen/dp_15"
         android:paddingEnd="@dimen/dp_15"
        android:layout_marginTop="@dimen/sp_10"
         android:paddingBottom="@dimen/dp_10"
         android:layout_height="wrap_content">
         <androidx.constraintlayout.widget.Guideline
             android:layout_width="wrap_content"
             android:orientation="vertical"
             android:id="@+id/guide_start"
             app:layout_constraintGuide_begin="@dimen/dp_10"
             android:layout_height="wrap_content">

         </androidx.constraintlayout.widget.Guideline>
         <androidx.constraintlayout.widget.Guideline
             android:layout_width="wrap_content"
             android:orientation="vertical"
             android:id="@+id/guide_end"
             app:layout_constraintGuide_end="@dimen/dp_10"
             android:layout_height="wrap_content">

         </androidx.constraintlayout.widget.Guideline>
         <androidx.constraintlayout.widget.Guideline
             android:layout_width="wrap_content"
             android:orientation="horizontal"
             android:id="@+id/guide_top"
             app:layout_constraintGuide_begin="@dimen/dp_10"
             android:layout_height="wrap_content">

         </androidx.constraintlayout.widget.Guideline>
         <androidx.constraintlayout.widget.Guideline
             android:layout_width="wrap_content"
             android:id="@+id/guide_bottom"
             android:orientation="horizontal"
             app:layout_constraintGuide_end="@dimen/dp_10"
             android:layout_height="wrap_content">

         </androidx.constraintlayout.widget.Guideline>
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:id="@+id/txtPatientName"
             android:layout_height="wrap_content"
             android:text="@string/label_name"
             android:textStyle="bold"
             android:textColor="@color/colorBlue"
             android:textSize="@dimen/sp_14"
             >

         </com.google.android.material.textview.MaterialTextView>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/txtDisplayName"
            android:textSize="@dimen/sp_12"
            android:text="@string/label_riya_patel"
            android:paddingStart="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_5"
            android:paddingTop="@dimen/dp_4"
            android:paddingBottom="@dimen/dp_4"
            android:textColor="@color/colorBlack"
            android:background="@drawable/input_bg"
            android:layout_height="wrap_content">

        </TextView>
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:id="@+id/txtPhone"

             android:textSize="@dimen/sp_14"
             android:textColor="@color/colorBlue"
             android:text="@string/label_phone_number"
             app:fontFamily="@font/poppinssemibold"
             android:layout_height="wrap_content">

         </com.google.android.material.textview.MaterialTextView>
         <TextView
             android:layout_width="match_parent"
             android:id="@+id/txtDisplayPhone"
             android:textSize="@dimen/sp_12"
             android:text="@string/label_9090245504"
             android:paddingEnd="@dimen/dp_5"
             android:paddingStart="@dimen/dp_5"
             android:paddingTop="@dimen/dp_4"
             android:paddingBottom="@dimen/dp_4"
             android:textColor="@color/colorBlack"
             android:background="@drawable/input_bg"
             android:layout_height="wrap_content">

         </TextView>
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:id="@+id/txtDate"
             android:layout_height="match_parent"
             app:layout_constraintHorizontal_bias="0"

             android:textSize="@dimen/sp_14"
             android:textColor="@color/colorBlue"
             android:text="@string/label_selected_date"
             app:fontFamily="@font/poppinssemibold"
             >

         </com.google.android.material.textview.MaterialTextView>
         <TextView
             android:layout_width="match_parent"
             android:id="@+id/txtDisplayDate"
             android:textSize="@dimen/sp_12"
             android:text="@string/dsgdsfsgsgs"
             android:paddingEnd="@dimen/dp_5"
             android:paddingStart="@dimen/dp_5"
             android:paddingTop="@dimen/dp_4"
             android:paddingBottom="@dimen/dp_4"
             android:textColor="@color/colorBlack"
             android:background="@drawable/input_bg"
             android:layout_height="wrap_content">

         </TextView>

         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:id="@+id/txtGender"
             android:text="@string/label_gender"
             android:layout_height="match_parent"
             app:layout_constraintHorizontal_bias="0"
             android:fontFamily="@font/poppinssemibold"
             android:textStyle="bold"

             android:textSize="@dimen/sp_14"
             android:textColor="@color/colorBlue"
             >

         </com.google.android.material.textview.MaterialTextView>
         <TextView
             android:layout_width="match_parent"
             android:id="@+id/txtDisplayGender"
             android:textSize="@dimen/sp_12"
             android:text="@string/dsgdsfsgsgs"
             android:paddingEnd="@dimen/dp_5"
             android:paddingStart="@dimen/dp_5"
             android:paddingTop="@dimen/dp_4"
             android:paddingBottom="@dimen/dp_4"
             android:textColor="@color/colorBlack"
             android:background="@drawable/input_bg"
             android:layout_height="wrap_content">

         </TextView>
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:id="@+id/txtProblem"
             android:text="@string/label_problem"
             android:layout_height="match_parent"
             app:layout_constraintHorizontal_bias="0"
             android:fontFamily="@font/poppinssemibold"
             android:textStyle="bold"

             android:textSize="@dimen/sp_14"
             android:textColor="@color/colorBlue"
             >

         </com.google.android.material.textview.MaterialTextView>
         <TextView
             android:layout_width="wrap_content"
             android:id="@+id/txtDisplayProblem"
             android:textSize="@dimen/sp_12"
             android:text="@string/label_dummy_intro"
             android:padding="@dimen/sp_5"
             android:textColor="@color/colorBlack"
             android:background="@drawable/edt_background"
             android:layout_height="wrap_content">

         </TextView>
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:id="@+id/txtHeight"
             android:text="@string/label_height"
             android:layout_height="match_parent"
             app:layout_constraintHorizontal_bias="0"
             android:fontFamily="@font/poppinssemibold"
             android:textStyle="bold"

             android:textSize="@dimen/sp_14"
             android:textColor="@color/colorBlue"
             >

         </com.google.android.material.textview.MaterialTextView>
         <TextView
             android:layout_width="match_parent"
             android:id="@+id/txtDisplayHeight"
             android:textSize="@dimen/sp_12"
             android:text="@string/label_5_7"
             android:paddingEnd="@dimen/dp_5"
             android:paddingStart="@dimen/dp_5"
             android:paddingTop="@dimen/dp_4"
             android:paddingBottom="@dimen/dp_4"
             android:textColor="@color/colorBlack"
             android:background="@drawable/input_bg"
             android:layout_height="wrap_content">

         </TextView>
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:id="@+id/txtWeight"
             android:text="@string/label_weight"
             android:layout_height="match_parent"
             app:layout_constraintHorizontal_bias="0"
             android:fontFamily="@font/poppinssemibold"
             android:textStyle="bold"

             android:textSize="@dimen/sp_14"
             android:textColor="@color/colorBlue"
             >

         </com.google.android.material.textview.MaterialTextView>
         <TextView
             android:layout_width="match_parent"
             android:id="@+id/txtDisplayWeight"
             android:textSize="@dimen/sp_12"
             android:text="@string/label_50kg"
             android:paddingEnd="@dimen/dp_5"
             android:paddingStart="@dimen/dp_5"
             android:paddingTop="@dimen/dp_4"
             android:paddingBottom="@dimen/dp_4"
             android:textColor="@color/colorBlack"
             android:background="@drawable/input_bg"
             android:layout_height="wrap_content">

         </TextView>
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:id="@+id/txtBloodGroup"
             android:text="@string/label_blood_group"
             android:layout_height="match_parent"
             app:layout_constraintHorizontal_bias="0"
             android:fontFamily="@font/poppinssemibold"
             android:textStyle="bold"

             android:textSize="@dimen/sp_14"
             android:textColor="@color/colorBlue"
             >

         </com.google.android.material.textview.MaterialTextView>
         <TextView
             android:layout_width="match_parent"
             android:id="@+id/txtDisplayBlood"
             android:textSize="@dimen/sp_12"
             android:text="@string/label_a"
             android:paddingEnd="@dimen/dp_5"
             android:paddingStart="@dimen/dp_5"
             android:paddingTop="@dimen/dp_4"
             android:paddingBottom="@dimen/dp_4"
             android:textColor="@color/colorBlack"
             android:background="@drawable/input_bg"
             android:layout_height="wrap_content">

         </TextView>
    <LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:paddingStart="@dimen/dp_10"
    android:paddingEnd="@dimen/dp_10"
        android:weightSum="2"
    android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_7"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/loginbtn_bg"
            android:backgroundTint="@color/colorDarkBlue"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/label_confirm_appointment"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_10"
            android:textStyle="bold">

        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>

     </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/imgWave"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/waveimg3"
        android:translationZ="-1dp"
        android:alpha="0.4"
        android:translationY="@dimen/dp_25"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>