<?xml version="1.0" encoding="utf-8"?>

<!--dont use this activity-->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userProfile">


=======
    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/id_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="@dimen/dp_10"
        android:layout_height="wrap_content">

    </ImageView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_begin="@dimen/dp_20">


    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_inner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.22" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_end="@dimen/dp_20">

        app:layout_constraintGuide_percent="0.95">


    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_end="@dimen/dp_30">

        app:layout_constraintGuide_percent="0.95">


    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_imgstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_begin="@dimen/dp_80">

        app:layout_constraintGuide_percent="0.1">


    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_outer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_begin="@dimen/dp_40" />
=======
        app:layout_constraintGuide_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_outerin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_end="@dimen/dp_40" />
=======
        app:layout_constraintGuide_percent="0.9" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewtop"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="@id/guide_inner"
        app:layout_constraintTop_toBottomOf="@id/guide_top"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageMan"
        android:layout_width="130dp"
        android:layout_height="135dp"
        android:src="@drawable/ellipsesampleimage4"
        app:civ_border_color="@color/colorBlue"
        app:civ_border_width="4dp"
        app:layout_constraintEnd_toEndOf="@id/guide_end"

        app:layout_constraintStart_toEndOf="@id/guide_inner"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/guide_imgstart"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/label_yash_raj_sharma"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/imageMan" />


    <View
        android:id="@+id/viewlayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/sp_10"
        android:background="@drawable/background_bg"
        app:layout_constraintBottom_toBottomOf="@id/guide_bottom"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/textName"
        tools:ignore="UnknownId" />

    <!--
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_ellipse_3"
        app:layout_constraintEnd_toEndOf="@id/guide_outerin"
        app:layout_constraintTop_toBottomOf="@id/textName" />
-->
    <de.hdodenhof.circleimageview.CircleImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_ellipse_3"
        android:src="@drawable/ic_group_23"


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_20"
        android:text="@string/label_name"
        android:textColor="@color/colorBlue"
        android:textColorHighlight="@color/colorBlue"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"

        tools:ignore="MissingConstraints,NotSibling" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/label_phone_number"
        android:textColor="@color/colorBlue"
        android:textColorHighlight="@color/colorBlue"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/label_gender"
        android:textColor="@color/colorBlue"
        android:textColorHighlight="@color/colorBlue"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewBlood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/label_blood_group"
        android:textColor="@color/colorBlue"
        android:textColorHighlight="@color/colorBlue"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/label_weight"
        android:textColor="@color/colorBlue"
        android:textColorHighlight="@color/colorBlue"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/label_height"
        android:textColor="@color/colorBlue"
        android:textColorHighlight="@color/colorBlue"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"


</androidx.constraintlayout.widget.ConstraintLayout>